Fixed view issues on mobile for past articles zone.

--- a/Client/bxslide/jquery.bxslider.css
+++ b/Client/bxslide/jquery.bxslider.css
@@ -31,6 +31,7 @@ ul.bxslider {
   /*-moz-box-shadow: 0 0 5px #ccc;
   -webkit-box-shadow: 0 0 5px #ccc;
   box-shadow: 0 0 5px #ccc;*/
+  margin: 0 auto;
   border: 5px solid #fff;
   background: #fff;
 }
@@ -111,7 +112,7 @@ ul.bxslider {
 }*/
 .bx-wrapper .bx-controls-direction a {
   position: absolute;
-  top: 50%;
+  top: 38%;
   margin-top: -16px;
   outline: 0;
   width: 32px;
